fix: minor improvemets + truncate ids for smaller screens + adjust position of QR code and balances

--- a/client/src/app/components/stardust/AddressBalance.scss
+++ b/client/src/app/components/stardust/AddressBalance.scss
@@ -68,6 +68,8 @@
 
                 .material-icons {
                     font-size: 18px;
+                    color: #b0bfd9;
+                    padding-left: 5px;
                 }
             }
         }
@@ -84,6 +86,10 @@
                 }
             }
         }
+    }
+
+    @include phone-down {
+        justify-content: center;
     }
 }
 
